Appointment group generation now works, need to save them to db, add history and design

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,9 @@
 
 en:
   hello: "Hello world"
+  generate_group: "Genereaza grup"
+  generate_single: "Genereaza single"
+  history: "Istoric"
+  principal: "Principal"
+  partner: "Partner"
+  principal_male: "Conducator"
